ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /api(/|$)(.*)
          backend:
            serviceName: todo-backend-service
            servicePort: 5300
        - path: /grpc
          backend:
            serviceName: todo-backend-service
            servicePort: 5200
